// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for maxWidth: 36 and columns: 230 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(10, minmax(0, 1fr)) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 0.5) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 46 and columns: 20 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(auto-fit, 46px) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 1) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for maxWidth: 46 and columns: 20 2`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 0.5) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
  }
}

@media(min-width:1000px) {
  :host {
    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
  }
}

@media(min-width:1300px) {
  :host {
    grid-template-columns: repeat(auto-fit, 46px) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for maxWidth: 46 and columns: 80 1`] = `
":host {
  display: grid;
  grid-auto-rows: 1fr !important;
  grid-template-columns: repeat(1, minmax(0, 1fr)) !important;
  gap: max(4px, var(--p-internal-segmented-control-scaling, 1) * 6px) !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}"
`;
